@@ -1,3 +1,9 @@
+2007-12-03  Akim Demaille  <demaille@gostai.com>
+
+	More type.
+	* include/kernel/utypes.hh: Give access to the type of
+	the map values.
+
 2007-11-30  Guillaume Deslandes  <deslandes@gostai.com>
 
 	Improve regexps in r1952.
